--- a/webpages/css/sb-admin.css
+++ b/webpages/css/sb-admin.css
@@ -229,3 +229,17 @@ ul.alert-dropdown {
 .image-fill {
     width: 100%;
 }
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
+
+.vertical-center {
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
