--- a/webpages/css/modern-business.css
+++ b/webpages/css/modern-business.css
@@ -111,3 +111,16 @@ footer {
         height: 25%;
     }
 }
+
+.fillPortfolio {
+    /*width: 100%;*/
+    /*height: 100%;*/
+    max-width:100%;
+    max-height:100%;
+    /*background-position: center;
+    background-size: cover;*/
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
