--- a/webpages/css/modern-business.css
+++ b/webpages/css/modern-business.css
@@ -45,6 +45,8 @@ header.carousel .fill {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
     position: relative;
 }
 
@@ -112,15 +114,25 @@ footer {
     }
 }
 
-.fillPortfolio {
+img.fillPortfolio {
     /*width: 100%;*/
     /*height: 100%;*/
-    max-width:100%;
-    max-height:100%;
+    /*max-width:100%;*/
+    /*max-height:100%;*/
     /*background-position: center;
     background-size: cover;*/
     display: block;
     margin-left: auto;
     margin-right: auto;
     position: relative;
+}
+
+.test {
+    height:100%;
+    /*background-position: center;
+    background-size: cover;*/
+}
+
+.wrapContents {
+    display: inline-block;
 }
