--- a/webpages/css/shop-homepage.css
+++ b/webpages/css/shop-homepage.css
@@ -63,12 +63,33 @@ footer {
     height: 100%;
 }
 
-.carousel .fill {
+.carousel .fit {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    /*background-position: center;
+    background-size: cover;*/
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    position: relative;
+}
+
+.carousel .fillDiv {
     width: 100%;
     height: 100%;
+    /*max-width:100%;*/
+    /*max-height:100%;*/
     background-position: center;
     background-size: cover;
+    position: absolute;
 }
+
+.blur {
+    filter: blur(15px);
+}
+
 
 @media(max-width:767px) {
     .img-portfolio {
