--- a/webpages/css/modern-business.css
+++ b/webpages/css/modern-business.css
@@ -89,12 +89,6 @@ header.carousel .fillDiv {
     font-style: italic;
 }
 
-/* Footer Styles */
-
-footer {
-    margin: 50px 0;
-}
-
 /* Responsive Styles */
 
 @media(max-width:991px) {
@@ -135,4 +129,25 @@ img.fillPortfolio {
 
 .wrapContents {
     display: inline-block;
+}
+
+
+/* Footer Styles */
+
+footer {
+    background-color: #0F0F0F;
+}
+
+footer p, footer small, footer a {
+    color: #9d9d9d;
+}
+
+footer a:hover {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+footer .container {
+    padding-top: 0px;
+    padding-bottom: 50px;
 }
